# url-shortener

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260101_0000-0001_initial.py
app/: __init__.py  config.py  db.py  dependencies.py  logging_config.py  main.py  middleware.py  models.py  redis_client.py  schemas.py
app/api/: links.py  qr.py  redirect.py
app/core/: base62.py  ratelimit.py  shortcode.py
app/services/: analytics.py  geoip.py  links.py  useragent.py
app/static/: app.js  index.html  style.css
scripts/: entrypoint.sh  seed.py
tests/: test_base62.py  test_schemas.py  test_useragent.py
